# locosim_ros2_humble

./: .gitignore  INSTALL.docx  INSTALL.md  README.md
climbingrobot_optimization/: README.md  package.xml  setup.cfg  setup.py
climbingrobot_optimization/climbingrobot_optimization/: __init__.py  casadi_backend.py  dynamics.py  jump_optimizer.py  kinematics.py  mpc_controller.py  params.py
climbingrobot_optimization/climbingrobot_optimization/ros2_nodes/: __init__.py  jump_optimizer_node.py  mpc_controller_node.py
climbingrobot_optimization/cpp_kernel/: CMakeLists.txt
climbingrobot_optimization/cpp_kernel/include/: dynamics_kernel.hpp
climbingrobot_optimization/cpp_kernel/src/: bindings.cpp  dynamics_kernel.cpp
climbingrobot_optimization/launch/: climbingrobot_optimization.launch.py
climbingrobot_optimization/test/: test_conversion.py
robot_control/: README.md  package.xml  setup.py
robot_control/base_controllers/: base_controller.py  base_controller_fixed.py  quadruped_controller.py
robot_control/base_controllers/climbingrobot_controller/: climbingrobot_controller.py  climbingrobot_controller2.py
robot_control/base_controllers/components/: controller_manager.py  gripper_manager.py
robot_control/base_controllers/components/rl_velocity_controller/: LocomotionPolicyWrapper.py  config.py  legs_attr.py  rl_controller.py
robot_control/base_controllers/utils/: common_functions.py  pid_tuner.py
robot_control/robot_control/: base_controller.py  quadruped_controller.py
robot_control/robot_control/components/: controller_manager.py  gripper_manager.py  whole_body_controller.py
robot_control/robot_control/components/inverse_kinematics/: inv_kinematics_pinocchio.py  inv_kinematics_quadruped.py
robot_control/robot_control/components/leg_odometry/: leg_odometry.py
robot_control/robot_control/utils/: common_functions.py  kin_dyn_utils.py  math_tools.py  pidManager.py  ros_publish.py  utils.py
robot_descriptions/climbingrobot_description/: CMakeLists.txt  package.xml
robot_descriptions/climbingrobot_description/config/: ros_impedance_controller_climbingrobot2.yaml  ros_impedance_controller_climbingrobot2landing.yaml
robot_descriptions/climbingrobot_description/gazebo/: gazebo.xacro
robot_descriptions/climbingrobot_description/launch/: upload.launch.py
robot_descriptions/climbingrobot_description/rviz/: conf.rviz  conf_paper.rviz  conf_paper_irim.rviz  conf_paper_landing.rviz  conf_paper_tro_bottom.rviz
robot_descriptions/climbingrobot_description/urdf/: climbingrobot2.xacro  gazebo.urdf.xacro  ros2_control.xacro
robot_descriptions/go1_description/: CMakeLists.txt  package.xml
robot_descriptions/go1_description/config/: ros_impedance_controller.yaml
robot_descriptions/go1_description/gazebo/: gazebo.xacro
robot_descriptions/go1_description/launch/: rviz.launch.py  spawn.launch.py  upload.launch.py
robot_descriptions/go1_description/robots/: go1.urdf.xacro
robot_descriptions/go1_description/scripts/: go0
robot_descriptions/go1_description/urdfs/: leg.gazebo.xacro  leg.transmission.xacro  ros2_control.xacro
robot_descriptions/go2_description/: CMakeLists.txt  package.xml
robot_descriptions/go2_description/config/: ros_impedance_controller.yaml
robot_descriptions/go2_description/gazebo/: gazebo.xacro
robot_descriptions/go2_description/launch/: rviz.launch.py  spawn.launch.py  upload.launch.py
robot_descriptions/go2_description/meshes/: foot.stl  hip.stl  lowerleg.stl  lowerleg_mirror.stl  trunk.stl  upperleg.stl  upperleg_mirror.stl
robot_descriptions/go2_description/robots/: go2.urdf.xacro
robot_descriptions/go2_description/rviz/: conf_hw.rviz
robot_descriptions/go2_description/urdfs/: leg.gazebo.xacro  leg.xacro  ros2_control.xacro
robot_hardware_interfaces/: README.md
robot_hardware_interfaces/base_hardware_interface/: CMakeLists.txt  package.xml
robot_hardware_interfaces/base_hardware_interface/include/base_hardware_interface/: base_robot_hw.hpp  contact_switch_sensor_interface.hpp  ground_truth_interface.hpp
robot_hardware_interfaces/base_hardware_interface/src/: base_robot_hw.cpp
ros_impedance_controller/: CMakeLists.txt  controller_plugin.xml  package.xml
ros_impedance_controller/config/: joint_state_publisher.yaml  operator.rviz  operator_floating.rviz
ros_impedance_controller/include/ros_impedance_controller/: controller.hpp
ros_impedance_controller/launch/: ros_impedance_controller.launch.py  ros_impedance_controller_climbingrobot2.launch.py  visualize.launch.py
ros_impedance_controller/scripts/: test_stand.sh
ros_impedance_controller/src/: controller.cpp
ros_impedance_controller/srv/: SetPids.srv
