<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>climbingrobot_optimization</name>
  <version>1.0.0</version>
  <description>
    Python (+ optional C++) port of the MATLAB MPC controller and jump optimal
    control code from the ALPINE climbing_robots2 repository. Provides an offline
    jump optimiser, an online receding-horizon MPC controller, and ROS 2 (Humble)
    nodes wrapping both.
  </description>

  <maintainer email="dev@example.com">ALPINE port maintainer</maintainer>
  <license>BSD-3-Clause</license>

  <url type="repository">https://github.com/mfocchi/climbing_robots2</url>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS 2 runtime deps -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- Python numerical deps (installed via pip / rosdep) -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
