<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go1_description</name>
  <version>0.0.1</version>
  <description>Go1 Description Package (ROS2 Humble / Gazebo Classic)</description>

  <license>BSD-3</license>
  <author email="francesco.roscia@iit.it">Francesco Roscia</author>
  <maintainer email="francesco.roscia@iit.it">Francesco Roscia</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>ros_impedance_controller</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- Let Gazebo Classic resolve package://go1_description/... mesh URIs.
         gazebo_ros' environment hook prepends this path to GAZEBO_MODEL_PATH
         when the workspace is sourced. ${prefix} is the install share dir of
         this package, so ${prefix}/.. is the dir that CONTAINS go1_description,
         which is what package:// resolution needs. Without this the robot
         spawns but its mesh visuals are invisible ("empty" Gazebo). -->
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
  </export>
</package>
